--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,8 @@
     left: 40px;
     right: 40px;
     bottom: 40px;
+    width: 500px;
+    height: max-content;
     background-color: #fefefe;
     font-family: Arial, Helvetica, sans-serif;
     left: 50%;
@@ -14,6 +16,8 @@
   .modal-footer{
     display: flex;
     justify-content: flex-end;
+    margin-top: 50px;
+    padding: 20px;
 
   }
 .nfss-table-headers{
@@ -59,6 +63,7 @@ tr:hover{
 }
 .nfss-table-body{
   text-align: left;
+ 
 }  
   .nfss-modal-button{
     background-color: #2db92d; /* Green */
@@ -77,9 +82,6 @@ tr:hover{
   font-family: "Lucida Console", "Courier New", monospace;
   transition-duration: 0.5s;
   }
-  #nfss-signup-user{
-    height: 410px;
-  }
   .nfss-modal-title{
     padding: 10px;
     font-size: 30px;
@@ -89,6 +91,7 @@ tr:hover{
   }
   .nfss-modal-body {
     padding: 20px;
+    font-size: 22px;
   }
   .modal-output-message{
     font-size: 23px;
@@ -101,7 +104,7 @@ tr:hover{
   }
   .nfss-modal-label{
    margin-right: 15;
-   width:100px;
+   width:115px;
    font-size: 20px;
   }
   .nfss-modal-value{
